# ZPE-Mocap

./: .gitignore  AGENTS.md  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOC_REGISTRY.md  GOVERNANCE.md  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.gpd/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  state.json
code/: Dockerfile  MANIFEST.in  README.md  pyproject.toml
code/fixtures/: locked_corpus_v1.json
code/format/: ZPMOC_SCHEMA_V1.json
code/scripts/: _common.py  bootstrap_and_test.sh  cmu_ingest.py  gate_a_setup.py  gate_b_build.py  gate_c_benchmarks.py  gate_d_falsification.py  gate_e_appendix_ingestion.py  gate_e_package.py  gate_e_runpod_readiness.py  gate_f_commercial_closure.py  gate_m1_acl_comparator.py  gate_m2_live_runtime.py  gate_m3_corpus_stress.py  gate_m4_replay_core_claims.py
code/src/zpe_mocap/: __init__.py  benchmark.py  constants.py  metrics.py  retarget.py  validation.py
code/tests/: test_codec.py  test_search.py
code/zpe_mocap/: __init__.py  adapters.py  benchmark.py  bvh_loader.py  cli.py  cmu.py  codec.py  constants.py  retarget.py  search.py  synthetic.py  utils.py
docs/: ARCHITECTURE.md  DOC_REGISTRY.md  FAQ.md  LEGAL_BOUNDARIES.md  README.md  SUPPORT.md  market_surface.json
proofs/: README.md
proofs/logs/: 20260320T152557Z_boundary_context.txt  20260320T152557Z_codex_receipt.md  20260320T152557Z_comet_run.json  20260320T174818Z_codex_receipt.md  20260320T181005Z_codex_receipt.md  20260320T182435Z_codex_receipt.md  20260320T195227Z_codex_disk_cleanup.txt  20260320T195227Z_codex_receipt.md  20260321T014252Z_codex_automation_audit.txt  20260321T014252Z_codex_receipt.md  README.md  (+4 more)
(+106 files in other folders)
