[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-mocap"
version = "0.0.1"
description = "Deterministic motion compression reference implementation for ZPE Mocap."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Zer0pa-SAL-6.0" }
authors = [{ name = "Zer0pa" }]
dependencies = ["numpy>=2.0"]

[project.urls]
Repository = "https://github.com/Zer0pa/ZPE-Mocap"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
