[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-mocap"
# Internal package lineage version; public release tagging is tracked separately.
version = "0.1.0"
description = "Zero-label structural motion search and compression. ZPE-MoCap deterministic codec/search package."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Zer0pa" }]
license = { text = "LicenseRef-Zer0pa-SAL-6.0" }
dependencies = [
  "numpy>=1.24",
]
keywords = ["motion-capture", "animation", "search", "compression", "ZPE", "zpe-mocap"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
zpe-mocap = "zpe_mocap.cli:main"

[project.optional-dependencies]
cmu = ["bvhio"]
gates = ["comet_ml>=3.43", "zstandard>=0.22"]
dev = ["pytest", "build"]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Mocap"
Repository = "https://github.com/Zer0pa/ZPE-Mocap"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["zpe_mocap*"]
exclude = ["tests*"]
